tests/ui/privacy/pub-priv-dep/pub-priv1.stderr
error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:29:5
   |
LL |     pub field: OtherType,
   |     ^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/pub-priv1.rs:9:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:36:5
   |
LL |     pub fn pub_fn_param(param: OtherType) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:39:5
   |
LL |     pub fn pub_fn_return() -> OtherType { OtherType }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:46:5
   |
LL |     type Foo: OtherTrait;
   |     ^^^^^^^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:50:1
   |
LL | pub trait WithSuperTrait: OtherTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:59:5
   |
LL |     type X = OtherType;
   |     ^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:63:1
   |
LL | pub fn in_bounds<T: OtherTrait>(x: T) { unimplemented!() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:66:1
   |
LL | pub fn private_in_generic() -> std::num::Saturating<OtherType> { unimplemented!() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:69:1
   |
LL | pub static STATIC: OtherType = OtherType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:72:1
   |
LL | pub const CONST: OtherType = OtherType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:75:1
   |
LL | pub type Alias = OtherType;
   | ^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:80:1
   |
LL | impl OtherTrait for PublicWithPrivateImpl {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:85:1
   |
LL | impl PubTraitOnPrivate for OtherType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:85:1
   |
LL | impl PubTraitOnPrivate for OtherType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 14 previous errors

